# pyopenjtalk

./: pyproject.toml  setup.py
.github/workflows/: ci.yaml  test.yaml
pyopenjtalk/: __init__.py  htsengine.pyi  htsengine.pyx  openjtalk.pyi  openjtalk.pyx
pyopenjtalk/__pyinstaller/: app.py  hook-pyopenjtalk.htsengine.py  hook-pyopenjtalk.py  test_pyinstaller.py
pyopenjtalk/htsengine/: __init__.pxd
pyopenjtalk/openjtalk/: mecab.pxd
tests/: test_openjtalk.py
