[build-system]
requires = [
    "setuptools>=77; python_version>='3.9'",
    "setuptools>=64; python_version<'3.9'",
    "setuptools_scm>=8",
    "cython>=0.29.16",
    "cmake",
    "numpy>=1.25.0; python_version>='3.9'",
    "oldest-supported-numpy; python_version<'3.9'",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyopenjtalk"
dynamic = ["version", "license", "classifiers"]
description = "A python wrapper for OpenJTalk"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ryuichi Yamamoto", email = "zryuichi@gmail.com" }]
keywords = ["OpenJTalk", "Research"]
urls.Homepage = "https://github.com/r9y9/pyopenjtalk"
dependencies = [
    "importlib_resources; python_version<'3.9'",
    "numpy>=1.20.0",
    "tqdm",
]

[project.optional-dependencies]
docs = [
    "sphinx_rtd_theme",
    "nbsphinx>=0.8.6",
    "Jinja2>=3.0.1",
    "pandoc",
    "ipython",
    "jupyter",
]
dev = [
    "cython>=0.29.16",
    "pysen",
    "types-setuptools",
    "mypy<=0.910",
    "black>=19.19b0,<=20.8",
    "click<8.1.0",
    "flake8>=3.7,<4",
    "flake8-bugbear",
    "isort>=4.3,<5.2.0",
    "types-decorator",
    "importlib-metadata<5.0",
]
test = ["pytest", "scipy"]
marine = ["marine>=0.0.5"]

[tool.setuptools.packages.find]
include = ["pyopenjtalk*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyx", "*.pxd"]

[tool.setuptools_scm]
version_file = "pyopenjtalk/version.py"
version_file_template = '''
__version__ = "{version}"
'''
# local_scheme = "no-local-version"

[tool.pysen]
version = "0.10.2"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false # TODO: enable mypy in the future
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
